2010-10-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Cast less.

	* b-fro.c (fro_spew_partial): Remove unnecessary cast.
	* ci.c (BHDELTA): Delete macro.
	(addbranch): Use local var for temp ‘struct delta *’.
	* rcs.c (dolocks): Use local var for temp ‘const char *’.

2010-10-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘NULL’ more.

	* b-fro.c (fro_open): In the case of ‘RM_MEM’
	on a zero-sized file, use ‘NULL’ for ‘f->base’.

2010-10-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: nfs_NOENT_p

	* rcsedit.c (nfs_NOENT_p): New static func.
	(un_link, chnamemod): Use ‘nfs_NOENT_p’.

2010-10-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add configure option: --enable-suid[=setreuid]

	* b-excwho.c (set_uid_to): Use ‘HAVE_SETREUID’.
	* base.h (has_setreuid): Delete #define.

2010-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Don't bother with ‘psignal’.

	* b-isr.c (complain_signal) [HAVE_PSIGNAL]:
	Delete code and surrounding preprocessor conditional.

2010-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: change_mode

	* b-fb.c (change_mode): New func.
	* b-fb.h (change_mode): New func decl.
	* ci.c (fixwork): Use ‘change_mode’.
	* rcsedit.c (chnamemod): Likewise.

2010-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Allocate ‘REPO (r)’ also for new repo.

	Omission from 2010-05-24, "Rewrite parsing".
	* b-grok.c (empty_repo): New func.
	(full): Use ‘empty_repo’.
	* b-grok.h (empty_repo): New func decl.
	* rcsfnms.c (InitAdmin): Use ‘empty_repo’.
	* ci.c (addelta): No longer check for NULL ‘REPO (r)’.
	* rcsgen.c (format_assocs): Likewise.
	* rcsmerge.c (main): Likewise.
	* rcs.c (main): Likewise.  Also, use ‘GROK (desc)’ directly.
	Reported by Nelson H. F. Beebe.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Include program name in autogenerated tmpfile name.

	* b-feph.c (struct ephemstuff):
	Drop member ‘tmpdir’; add member ‘standard’.